--- a/src/img2md/Setting.form
+++ b/src/img2md/Setting.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="561" height="400"/>
     </constraints>
     <properties>
       <enabled value="false"/>
@@ -27,12 +27,14 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="bfd16" class="javax.swing.JLabel">
+              <component id="99fb7" class="javax.swing.JTextPane" binding="imagesFilesAreDepositedTextPane" default-binding="true">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
                 </constraints>
                 <properties>
-                  <text value="图片将保持在本地的相对路径中"/>
+                  <text value="Images files are deposited in a configurable directory relative to the markdown document."/>
                 </properties>
               </component>
             </children>
@@ -172,7 +174,7 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="on the road"/>
+                  <text value="on the way"/>
                 </properties>
               </component>
             </children>
