让本次存储的文本组件不能编辑

--- a/src/img2md/Setting.form
+++ b/src/img2md/Setting.form
@@ -34,6 +34,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <editable value="false"/>
                   <text value="Images files are deposited in a configurable directory relative to the markdown document."/>
                 </properties>
               </component>
